--- a/wp-content/themes/cfc/css/index.css
+++ b/wp-content/themes/cfc/css/index.css
@@ -11,6 +11,7 @@ div{
     cursor: pointer;
 }
 .about-header-div{
+    z-index: 1000000;
     margin-left: -4px;
     font-size: 1.5vmax;
     min-width: 133px;
